# shixi_dual_ur

./: README.md
dual_ur_description/: CMakeLists.txt  package.xml
dual_ur_moveit_config/: CMakeLists.txt
